<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways|snap">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/menu_button_size"
                android:layout_margin="16dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/rounded_border_2dp">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="@dimen/menu_button_size"
                    android:layout_height="@dimen/menu_button_size"
                    android:contentDescription="@string/back_icon"
                    android:scaleType="center"
                    android:src="@drawable/ic_back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/search_edit_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/search_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/menu_button_size"
                    android:layout_weight="1"
                    android:background="@null"
                    android:fontFamily="@font/montserrat_semibold"
                    android:imeOptions="actionSearch"
                    android:importantForAutofill="no"
                    android:inputType="text|none"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="LabelFor"
                    tools:text="Apple" />

                <ImageView
                    android:id="@+id/close"
                    android:layout_width="@dimen/menu_button_size"
                    android:layout_height="@dimen/menu_button_size"
                    android:contentDescription="@string/close_icon"
                    android:scaleType="center"
                    android:src="@drawable/ic_close"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/search_edit_text"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/popular_title"
            style="@style/SearchTitle"
            android:layout_marginTop="6dp"
            android:text="@string/popular_title"
            android:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/popular_recycler_view"
            style="@style/HorizontalList"
            android:layout_marginTop="8dp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/searched_title"
            style="@style/SearchTitle"
            android:layout_marginTop="24dp"
            android:text="@string/searched_title"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searched_recycler_view"
            style="@style/HorizontalList"
            android:layout_marginTop="8dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/result_title"
            style="@style/SearchTitle"
            android:layout_marginTop="10dp"
            android:text="@string/search_result_title"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/result_recycler_view"
            style="@style/VerticalList"
            android:layout_marginTop="4dp"
            android:visibility="gone"
            tools:visibility="visible" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="visible">

        <include
            android:id="@+id/progress_bar_widget"
            layout="@layout/screen_progress_bar_widget" />

        <include
            android:id="@+id/error_widget"
            layout="@layout/screen_error_widget" />

        <TextView
            android:id="@+id/empty_textview"
            style="@style/WarningTextView"
            android:text="@string/no_results"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>